Fixed layout issues, added styling to rooms and messages

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
     padding: 0;
     font-family: K2D, serif;
     position: relative;
-    
 }
 
 #logo {
@@ -15,12 +14,6 @@
     color: #FFF;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
-}
-
-#app {
-    display: grid;
-    grid-template-columns: 99vw 1vw;
-    grid-template-rows: 15vh 70vh 15vh;
 }
 
 footer {
@@ -50,7 +43,6 @@ footer a:hover {
 
 #loginContainer {
     display: flex;
-    grid-column: 1 / 3;
     margin: 60px 0px 0px 100px;
     justify-content: space-around;
 }
@@ -115,27 +107,39 @@ footer a:hover {
     }
 }
 
+/*CSS below is used to structure main part of app, all pages after sign-in*/
+
+#mainContainer {
+    display: grid;
+    grid-template-columns: 25vw 75vw;
+    grid-template-rows: 75vh 25vh;
+    position: fixed;
+    top: 150px;
+    z-index: -1;
+}
+
 /*CSS below is used for Rooms.js, RoomList.js, RoomCreate.js components*/
 
 #rooms {
+    grid-column: 1 / 2;
     display: flex;
     flex-direction: column;
     width: 25vw;
-    grid-column: 1 / 3;
+    margin: 0px;
 }
 
 .roomList {
     height: 50px;
-    margin: 0;
     width: 90%;
     padding: 0px 10px;
     border: none;
-    background-color: #999;
+    background-color: #e7e7e7;
     text-align: left;
 }
 
 .roomList:hover, .roomList:focus {
-    background-color: #888;
+    background-color: #b7b7b7;
+    outline: none;
 }
 
 
@@ -143,7 +147,7 @@ footer a:hover {
     width: 10%;
     border: none;
     height: 50px;
-    background-color: #999;
+    background-color: #e7e7e7;
 }
 
 .deleteButton:hover {
@@ -170,9 +174,41 @@ footer a:hover {
 /*CSS below is used for Messages.js components*/
 
 #messages {
+    grid-column: 2 / 3;
     display: flex;
     flex-direction: column;
-    width: 75vw;
+    flex-wrap: wrap;
+    width: 73.5vw;
+    position: relative;
+}
+
+.message {
+    display: flex;
+    margin: 10px;
+}
+
+.message li {
+    padding: 0px 10px;
+    list-style-type: none;
+}
+
+#messageSender {
     background-color: #333;
+}
+
+#createMessageWrapper {
+    align-self: flex-start;
     position: absolute;
+    top: 500px;
+    width: 100%;
+}
+
+#createMessage [type= 'submit'] {
+    position: sticky;
+    width: 10%;
+}
+
+#createMessage [type= 'text'] {
+    position: sticky;
+    width: 90%;
 }
